--- a/public/style.css
+++ b/public/style.css
@@ -8,3 +8,11 @@ main {
   padding: 1rem;
   height: 100vh;
 }
+
+.form {
+  border: 2px solid black;
+  padding: 20px;
+  width: 300px;
+  margin: 5px auto;
+  
+}
